// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/channel_notifications_modal/ExtraInfo should match snapshot, on DESKTOP 1`] = `
<span>
  <FormattedMessage
    defaultMessage="Selecting an option other than \\"Default\\" will override the global notification settings. Desktop notifications are available on Firefox, Safari, and Chrome."
    id="channel_notifications.override"
    values={Object {}}
  />
</span>
`;

exports[`components/channel_notifications_modal/ExtraInfo should match snapshot, on MARK_UNREAD 1`] = `""`;

exports[`components/channel_notifications_modal/ExtraInfo should match snapshot, on PUSH 1`] = `
<span>
  <FormattedMessage
    defaultMessage="Selecting an option other than \\"Global default\\" will override the global notification settings for mobile push notifications in account settings. Push notifications must be enabled by the System Admin."
    id="channel_notifications.overridePush"
    values={Object {}}
  />
</span>
`;
